<package format="2">
  <name>sim_sample_planning_ros_tool</name>
  <version>0.5.0</version>
  <description>Sample planning module for a vehicle in the simulation framework.</description>

  <license>BSD</license>
  <maintainer email="maximilian.naumann@kit.edu">Maximilian Naumann</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>
  <build_depend>roscpp</build_depend>
  <depend>roslib</depend>
  <depend>nodelet</depend>

  <depend>dynamic_reconfigure</depend>
  <depend>rosparam_handler</depend>

  <depend>simulation_only_msgs</depend>
  <depend>automated_driving_msgs</depend>
  <depend>util_eigen_geometry</depend>
  <depend>util_geometry_msgs</depend>

  <depend>lanelet2_io</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_interface_ros</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
